tests/errors/array_bounds_check_15.f90
program array_bounds_check_15
    implicit none

    integer, allocatable :: x(:)

    print *, x
end
